Fixed issue with part of records view disappearing on mobile screens. Changed body width to min-width: 1200px

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 
 body {
   height: 100vh;
+  min-width: 1200px;
   display: flex;
   align-items: center;
   justify-content: center;
