--- a/src/styles/buttonStyles.scss
+++ b/src/styles/buttonStyles.scss
@@ -31,8 +31,6 @@
 }
 
 .record-buttons {
-  min-width: 850px;
-  max-width: 100vw;
   margin: 0.5em 0;
   display: flex;
   justify-content: center;
