--- a/src/styles/mainAppStyles.scss
+++ b/src/styles/mainAppStyles.scss
@@ -1,6 +1,5 @@
 .record-keeper-container {
   height: 100vh;
-  width: 100vw;
 }
 
 .body-content {
