--- a/src/styles/recordStyles.scss
+++ b/src/styles/recordStyles.scss
@@ -5,13 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // height: 70vh;
-}
-
-.browse-records {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .record-fields-background {
